# livingdex

./: .containerignore  .editorconfig  .editorconfig-checker.json  .gitignore  Containerfile  Makefile  biome.jsonc  entrypoint.sh  livingdex.csproj  package-lock.json  package.json  packages.lock.json  pyproject.toml
.github/: dependabot.yml  renovate.json5
.github/workflows/: ci-cd.yml
livingdex/: __main__.py  app_keys.py  game_data.py  routes.py
livingdex/parsers/: __init__.py  gen1.py  gen2.py  gen3.py  gen4.py  gen5.py  gen6.py
livingdex/pkhex/: __init__.py  core.py  pkm.py
livingdex/static/: main.css  main.js
livingdex/templates/: game.html
src/livingdex/: __main__.py  app_keys.py  dotnet.py  game_data.py  game_info.py  hash_image.py  input_screenshots.py  pkhex.py  pkm.py
src/livingdex/game_info/: __init__.py  base.py  scarlet_violet.py
src/livingdex/pkhex/: __init__.py  pkm.py
src/livingdex/static/: main.css  main.js
src/livingdex/templates/: game.html
tests/: test_parsers.py  test_pkhex.py
tests/saves/: .editorconfig  alphasapphire.expected  alphasapphire.sav  black.expected  black.sav  black2.expected  black2.sav  blue.expected  blue.sav  crystal.expected  crystal.sav  diamond-slot1.expected  diamond-slot1.sav  diamond-slot2.sav  emerald-slot1.expected  emerald-slot1.sav  emerald-slot2.sav  firered-slot1.expected  firered-slot1.sav  firered-slot2.sav  gold.expected  gold.sav  heartgold-slot1.expected  heartgold-slot1.sav  heartgold-slot2.sav  leafgreen-slot1.expected  leafgreen-slot1.sav  leafgreen-slot2.expected  leafgreen-slot2.sav  omegaruby.expected  omegaruby.sav  pearl-slot1.expected  pearl-slot1.sav  pearl-slot2.expected  pearl-slot2.sav  platinum-slot1.expected  platinum-slot1.sav  platinum-slot2.sav  red.expected  red.sav  (+23 more)
